--- a/Display Menu/Base.lproj/InfoPlist.strings
+++ b/Display Menu/Base.lproj/InfoPlist.strings
@@ -1,2 +1,2 @@
 CFBundleDisplayName = "Display Menu";
-NSHumanReadableCopyright = "Copyright © 2017 Chris Warrick. All rights reserved. Licensed under the 3-clause BSD license.";
+NSHumanReadableCopyright = "Copyright © 2017-2018 Chris Warrick. All rights reserved. Licensed under the 3-clause BSD license.";
