--- a/Display Menu/pl.lproj/InfoPlist.strings
+++ b/Display Menu/pl.lproj/InfoPlist.strings
@@ -1,3 +1,3 @@
 CFBundleDisplayName = "Menu Ekranów";
-NSHumanReadableCopyright = "Copyright © 2017 Chris Warrick. Wszelkie prawa zastrzeżone. Na licencji BSD (3-klauzulowej).";
+NSHumanReadableCopyright = "Copyright © 2017-2018 Chris Warrick. Wszelkie prawa zastrzeżone. Na licencji BSD (3-klauzulowej).";
 
